tests/syntax_error/import_missing_quotes.jou
import stdlib/io.jou  # Error: expected a string to specify the file name, got a variable name 'stdlib'
